--- a/app/src/main/assets/sample.html
+++ b/app/src/main/assets/sample.html
@@ -76,8 +76,9 @@ button:focus {
 <body>
 	<center>
 		<p class="communities-title">NSR SDK JavaExample</p>
-		<p class="communities-title-class">NeosuranceSDK: <span>NeosuranceSDK_v3_java</span></p>
-		<p class="communities-title-class">User: <span>mario@rossi.com</span></p>
+		<p class="communities-title-class">NeosuranceSDK:<span>NeosuranceSDK_v3_java</span></p>
+		<p class="communities-title-class">JavaExample Version:<span>3.0.3</span></p>
+		<p class="communities-title-class">User:<span>mario@rossi.com</span></p>
 		<br>
 		<button onclick="exec('setup')">Setup</button>
 		<br>
