--- a/app/src/main/assets/sample.html
+++ b/app/src/main/assets/sample.html
@@ -77,7 +77,7 @@ button:focus {
 	<center>
 		<p class="communities-title">NSR SDK JavaExample</p>
 		<p class="communities-title-class">NeosuranceSDK:<span>NeosuranceSDK_v3_java</span></p>
-		<p class="communities-title-class">JavaExample Version:<span>3.0.4</span></p>
+		<p class="communities-title-class">JavaExample Version:<span>3.0.6</span></p>
 		<p class="communities-title-class">User:<span>mario@rossi.com</span></p>
 		<br>
 		<button onclick="exec('setup')">Setup</button>
@@ -98,6 +98,10 @@ button:focus {
 		<br>
 		<button onclick="exec('resetCruncher')">ResetCruncher</button>
 		<br>
+		<!--button onclick="exec('policies')">Policies</button>
+		<br>
+		<button onclick="exec('closeView')">Close View</button>
+		<br-->
 	</center>
 </body>
 </html>
